--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
 /*
- * Author: Carlos Alvarez
- * URL: http://alvarez.is
+ * Author: David Coven
+ * URL: http://covendavid.com
  *
- * Project Name: Munter - Free Bootstrap 3 Theme
  * Version: 1.0
- * URL: http://blacktie.co
+ * 
  */
  
 .font-thin {
